# agent-infra

./: .gitignore  .precommit-guards.env  CLAUDE.md  CYCLE.md  GOALS.md  MAINTAIN.md  REFACTOR.md  agent-failure-modes.md  agent_infra_mcp.py  clean-verifier-evolver-pattern.md  corpus-substrate-architecture.md  duckdb_mcp.py  improvement-log.md  justfile  maintenance-actions.jsonl  maintenance-checklist.md  modal_triage_mcp.py  pyproject.toml  setup-friend.sh  skill_manifest.jsonl  system-architecture.md
.claude/: overview-marker-source  overview-marker-tooling  settings.json  settings.local.json
claim_bench/: README.md  pyproject.toml
claim_bench/cases/: auth_ie_bookstore_delivery.json  auth_ie_firefighter_age_slovenia.json  auth_ie_scrabble_twoletter.json  auth_ie_statin_timing_myalgia.json  auth_mixed_dietary_cholesterol.json  auth_mixed_mammography_40s.json  auth_mixed_saturated_fat_cvd.json  auth_mixed_ssri_mild_depression.json  auth_nv_agi_transform.json  auth_nv_best_language.json  auth_nv_climate_policy_should.json  auth_nv_most_important_organelle.json  auth_sup_mrna_vaccine_efficacy.json  auth_sup_semaglutide_step.json  ext_averitec_00.json  ext_averitec_01.json  ext_averitec_02.json  ext_averitec_03.json  ext_averitec_04.json  ext_claimdb_09.json  ext_claimdb_10.json  ext_claimdb_11.json  ext_claimdb_12.json  ext_claimdb_13.json  ext_hover_06.json  ext_hover_07.json  ext_hover_08.json  ext_msvec_20.json  ext_msvec_21.json  ext_msvec_22.json  ext_msvec_23.json  ext_some-misinformation-_24.json  ext_some-misinformation-_25.json  ext_some-misinformation-dete_24.json  ext_some-misinformation-dete_25.json  extc_averitec_04.json  extc_averitec_05.json  extc_averitec_06.json  extc_averitec_07.json  extc_averitec_08.json  (+10 more)
claim_bench/scripts/: author_thin_class_cases.py  import_external_cases.py
claim_bench/src/claim_bench/: scorer.py
claim_bench/tests/: test_phase1.py
config/: reflect-omission-rules.json
decisions/: 2026-04-20-unified-agent-logs.md  2026-05-11-cross-attestation-substrate.md  2026-05-26-cross-attestation-substrate-v2.md  2026-05-27-corpus-as-event-log-repos-as-hybrid.md  2026-05-28-verify-against-ground-truth-not-model-text.md  2026-05-31-gemini-cli-to-paid-api-migration.md  2026-05-31-skillopt-not-institutionalized.md  2026-06-01-cross-repo-contradiction-layer-not-built.md  2026-06-01-epistemic-core-implementation.md  2026-06-01-genomic-phenotype-support-linking.md  2026-06-02-codex-cli-project-parity.md  2026-06-03-corpus-test-pollution.md  2026-06-03-verifier-bound-autonomy.md  2026-06-04-consumption-over-autonomy.md  2026-06-04-reasoning-quality-signal-not-built.md  2026-06-07-biomedical-mcp-tool-consolidation.md  2026-06-07-categorical-discovery-framework-mapping.md  2026-06-07-guardian-angels-transfer.md  2026-06-07-state-externalization-lens.md  2026-06-07-verifier-conditional-autonomy.md  (+1 more)
scripts/: doctor.py  (+80 more)
scripts/corpus/: README.md  pyproject.toml
scripts/corpus/schemas/: .gitkeep  README.md
scripts/corpus/schemas/v1/: annotation.v1.json  claim.v1.json  source_record.v1.json  verdict.v1.json
(+213 files in other folders)
