[project]
name = "agent-infra"
version = "0.1.0"
description = "Meta project knowledge base — hook designs, failure modes, architecture decisions"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.105.0",
    "claude-agent-sdk>=0.1.44",
    "corpus-core[all]",
    "duckdb>=1.1",
    "exa-py>=2.6.1",
    "fastmcp>=3.4.2,<4.0",
    "google-genai>=2.8.0",
    "inspect-ai>=0.3.0",
    "openai>=2.26.0",
    "parallel-web>=0.4.0",
]

[tool.uv.sources]
corpus-core = { path = "scripts/corpus/packages/corpus-core", editable = true }

[project.scripts]
agentlogs = "agentlogs.cli:main"
agent-infra-mcp = "agent_infra_mcp:main"
corpus-mcp = "scripts.corpus_mcp:main"
duckdb-mcp = "duckdb_mcp:main"
modal-triage-mcp = "modal_triage_mcp:main"
parallel-mcp = "scripts.parallel_mcp:main"

[tool.pyright]
typeCheckingMode = "basic"
exclude = ["artifacts/", "downloads/", "bundles/", ".claude/worktrees/"]
extraPaths = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "modal>=1.4.2",
    "pytest>=9.0",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
]

[tool.hatch.build.targets.wheel]
packages = [".", "src/agentlogs"]

[tool.hatch.build.targets.wheel.force-include]
"src/agentlogs" = "agentlogs"
