[project]
name = "corpus-workspace"
version = "0"
description = "Workspace root for the corpus toolkit (meta-package; depends on every workspace member so `uv sync` from here installs them all)"
requires-python = ">=3.11"
dependencies = [
    "corpus-core[all]",
    "corpus-testing",
]

[project.optional-dependencies]
modal = [
    "corpus-core[modal]",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "rfc8785>=0.1.4",
]

[tool.uv.sources]
corpus-core = { path = "../../../substrate/packages/corpus-core", editable = true }
corpus-testing = { path = "../../../substrate/packages/corpus-testing", editable = true }
